# tmux-startup

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  tmux-startup@.service
src/: cli.rs  main.rs
